LayoutTests:

Reviewed by Darin.

        http://bugs.webkit.org/show_bug.cgi?id=7266
        Webarchive format saves duplicate WebSubresources to .webarchive file

        * webarchive/test-duplicate-resources-expected.txt: Duplicate resources removed.
        * webarchive/test-frameset-expected.txt: Ditto.

WebKit:

        Reviewed by Darin.

        http://bugs.webkit.org/show_bug.cgi?id=7266
        Webarchive format saves duplicate WebSubresources to .webarchive file

        Tests: webarchive/test-duplicate-resources.html
               webarchive/test-frameset.html

        * WebView/WebArchiver.mm:
        (+[WebArchiver _archiveWithMarkupString:fromFrame:nodes:]): Use an NSMutableSet to prevent
        duplicate subresources from being added to the webarchive.



Canonical link: https://commits.webkit.org/16332@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19422 268f45cc-cd09-0410-ab3c-d52691b4dbfc